<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MWIntentTester</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="screen_app_id_label">Target ID</string>
    <string name="screen_app_id_hint">App ID</string>
    <string name="screen_image_descriptor">Screen placeholder for displaying incoming images</string>
    <string name="screen_button_tl">5</string>
    <string name="screen_button_ml">4</string>
	<string name="screen_button_bl">3</string>
	<string name="screen_button_tr">0</string>
	<string name="screen_button_mr">1</string>
    <string name="screen_button_br">2</string>
	<string name="screen_button_announce">Discover</string>
	<string name="screen_button_activate">Activate</string>
	<string name="screen_button_deactivate">Deactivate</string>
</resources>